# SSH_MCP

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README_JSON_ENV.md  claude_desktop_config.json  cursor-mcp-setup.md  cursor_mcp_config.json  env.example  fix-generate-g.js  fix-ssh-g.js  force-generate-gemini.js  force-generate-ssh-cursor.js  force-generate-ssh-gemini.js  force-install-commands.js  gemini_cli_config.json  package-lock.json  package.json  pyproject.toml  run_compatibility_tests.py  run_integration_tests.py  test_client_path.json  test_connect.json  test_connect_env.json  test_full_client_path.json  test_full_session.json  test_initialize.json  test_mcp_ssh_connect.js  test_server_structure.js  test_ssh_connect.js  test_ssh_connect.json  test_sshenv_connect.js  test_with_json_env.json  tsconfig.json  validate_integration_tests.py  validate_mcp_compatibility_tests.py
.claude/: settings.local.json
.cursor/: mcp.json
.kiro/specs/ssh-mcp-server/: design.md  requirements.md  tasks.md
docs/: .sshenv111  API.md  CLIENT_CONFIGURATIONS.md  INSTALLATION.md  README.md  TROUBLESHOOTING.md  first.pem  first.pem.pub  first_pem_format.pem  index.html  mpc.pem  new.pem  new_key  new_key.pub  task.md  test.pem  test_key  test_key.pub
examples/: connection_management_demo.py  mcp_server_demo.py  tool_schema_demo.py  usage_examples.py
final-test-commands/: exec.toml  init.toml  read.toml
scripts/: install-commands.js
src/: command-installer.ts  command-templates.ts  config.ts  connection-manager.ts  env-parser.ts  errors.ts  index.ts  logger.ts  mcp-server.ts  sshenv-template.ts  tools.ts  types.ts
src/__tests__/: basic.test.ts
ssh_mcp_server/: __init__.py  __main__.py  auth.py  connection.py  errors.py  manager.py  models.py  server.py  tools.py
test-gemini-commands/: connect.toml  disconnect.toml
test-gemini-commands-v2/: list-connections.toml  list-files.toml  write.toml
tests/: INTEGRATION_TEST_SUMMARY.md  MCP_CLIENT_COMPATIBILITY_SUMMARY.md  test_auth.py  test_authentication_integration.py  test_connection.py  test_connection_management_integration.py  test_end_to_end_integration.py  test_error_scenarios_integration.py  test_errors.py  test_file_operations.py  test_file_operations_integration.py  test_manager.py  test_mcp_client_compatibility.py  test_models.py  test_multi_connection_integration.py  test_reconnection.py  test_reconnection_integration.py  test_server.py  test_ssh_connect_integration.py  test_ssh_execute_integration.py  test_tools.py
